--- a/data-api/src/main/resources/templates/contract-analytics.html
+++ b/data-api/src/main/resources/templates/contract-analytics.html
@@ -513,7 +513,7 @@
             <div class="header-content">
                 <div class="logo-lockup">
                     <div class="logo-icon">
-                        <img src="../../../../../landing/images/logo.png" alt="logo" />
+                        <img src="/images/logo.png" alt="logo" />
                     </div>
                     <div class="logo-text">decentrifi</div>
                 </div>
@@ -635,7 +635,7 @@
                 <div class="footer-column">
                     <div class="logo-lockup" style="margin-bottom: 16px;">
                         <div class="logo-icon">
-                            <img src="../../../../../landing/images/logo.png" alt="logo" />
+                            <img src="/images/logo.png" alt="logo" />
                         </div>
                         <div class="logo-text">decentrifi</div>
                     </div>
